--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "quarkus-build",
+    "name": "know-how-quarkus-quarkus-build",
     "version": "23.0.0",
     "description": "Provide an optional Git commit hooks.",
     "private": true,
